<resources>
    <string name="app_name">Cash Master</string>
    <string name="title_activity_main">Cash Master</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="fragment_home_title">Transactions</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="balance">Balance</string>
    <string name="mock_username">Yandex</string>
    <string name="username">User</string>
    <string name="main_currency_hint">Main currency</string>
    <string name="developer" translatable="false">\@sorokinDev</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_new_trans">Add</string>
    <string name="this_button_will_work">This button will work soon</string>
    <string name="nav_about">About</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium dignissim vestibulum. Praesent congue odio sit amet nunc efficitur sagittis. Suspendisse ultricies eu arcu id lobortis. Fusce magna tortor, bibendum sit amet nunc sed, volutpat interdum dolor. Aliquam purus lacus, congue non nisl a, molestie commodo augue. Proin facilisis maximus lectus, quis rutrum lorem semper ac. Nam tellus dui, malesuada sed lectus in, rutrum posuere nibh. Praesent volutpat nec augue ac imperdiet. Nullam non sem varius justo interdum sodales. Sed sagittis diam odio, at scelerisque orci congue sit amet. Ut mattis neque ac elit condimentum efficitur. Morbi consectetur nulla est. Curabitur mollis ullamcorper elit et semper. Nullam mattis sed metus non luctus.

Aliquam sollicitudin sodales odio in aliquet. Nunc sit amet cursus enim, sed sodales purus. Donec tempus est vel purus aliquet pharetra. Praesent ac ligula in purus rhoncus lobortis quis a ante. Aliquam erat volutpat. Nullam dignissim orci ac sem tincidunt, sit amet lobortis mauris sodales. Vivamus feugiat tempus lacus vel vestibulum. Curabitur volutpat viverra nunc imperdiet tempor. Aliquam consequat tortor sit amet lorem lacinia lobortis. Etiam nec neque leo. Interdum et malesuada fames ac ante ipsum primis in faucibus.

Fusce venenatis vehicula lacinia. Suspendisse id mi ac felis condimentum aliquet. Phasellus laoreet quis nulla id egestas. Duis quis placerat tortor. Vestibulum aliquet augue sapien, eu viverra leo malesuada vel. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi sit amet efficitur risus, in congue est. Phasellus vestibulum enim tempor, hendrerit lacus blandit, venenatis justo. Donec varius metus at odio bibendum, at vestibulum mauris posuere.

Maecenas semper sed libero eu dignissim. Aliquam vel eros porttitor, dignissim tellus quis, venenatis dui. Sed lacinia lobortis condimentum. Ut felis dolor, porta vel condimentum et, vulputate nec augue. Proin ullamcorper ligula eu tincidunt finibus. Cras pulvinar id nibh ac sagittis. Maecenas nunc libero, auctor in turpis euismod, blandit venenatis nibh. Donec sodales ex id tempus blandit. Cras ullamcorper scelerisque urna, elementum blandit felis. Pellentesque rutrum nibh lobortis erat laoreet, vitae euismod lorem ultrices. Pellentesque vel finibus nisi. Phasellus consequat nunc nec sollicitudin commodo. Pellentesque ultricies, augue ac pellentesque vulputate, augue arcu dictum nibh, non dignissim justo arcu quis lacus. Morbi lectus sem, ornare quis ante ut, mollis fermentum erat. Maecenas et quam ante. Sed placerat tortor at ante ornare, a lacinia enim mollis.

Cras congue iaculis leo vel gravida. Integer sed scelerisque felis. Donec laoreet erat quis erat volutpat, scelerisque egestas magna pulvinar. Proin cursus massa sit amet sem fermentum porttitor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi lectus leo, porttitor non justo vel, faucibus blandit justo. Vivamus sit amet libero ornare lacus laoreet maximus a eu leo. Proin venenatis massa tincidunt nisi sollicitudin elementum. Donec iaculis pretium massa vitae finibus. Morbi ultrices, ligula sed lobortis aliquet, velit ex tincidunt ante, ac malesuada mauris magna suscipit sapien. Morbi a ex at justo semper eleifend eu a neque.</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="category">Category</string>
    <string name="hint_money">Sum</string>
    <string name="nav_transaction_add">Add transaction</string>
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
    <string name="btn_confirm">Confirm</string>
    <string name="nav_transactions">Transactions</string>
    <string name="transaction_added">Transaction added!</string>
    <string name="error_invalid_number">Invalid sum value</string>
</resources>
