<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:startDestination="@id/nav_tab_transactions">

    <navigation android:id="@+id/nav_tab_transactions" app:startDestination="@id/nav_transactions">
        <fragment
            android:id="@+id/nav_transactions"
            android:name="com.sorokin.yamob.cashmaster.ui.transactions_show.TransactionsFragment"
            android:label="@string/nav_transactions"
            tools:layout="@layout/fragment_transactions">
        </fragment>
    </navigation>

    <navigation android:id="@+id/nav_new_trans" app:startDestination="@id/nav_new_transactions">
        <fragment
            android:id="@+id/nav_new_transactions"
            android:name="com.sorokin.yamob.cashmaster.ui.transaction_new.TransactionNewFragment"
            android:label="@string/nav_new_trans"
            tools:layout="@layout/fragment_new_transaction">
            <action
                android:id="@+id/nav_action_add_transaction"
                app:destination="@id/nav_transaction_add"
                app:enterAnim="@android:anim/fade_in"
                app:exitAnim="@android:anim/fade_out">
            </action>
        </fragment>
        <fragment
            android:id="@+id/nav_transaction_add"
            android:name="com.sorokin.yamob.cashmaster.ui.transaction_add.TransactionAddFragment"
            android:label="@string/nav_transaction_add"
            tools:layout="@layout/fragment_add_transaction">
            <argument
                android:name="transaction_type"
                app:argType="integer"
                android:defaultValue="-1"/>
            <argument
                android:name="wallet_from"
                app:argType="integer"
                android:defaultValue="-1"/>
            <argument
                android:name="wallet_to"
                app:argType="integer"
                android:defaultValue="-1"
                />
            <argument
                android:name="target"
                app:argType="integer"
                android:defaultValue="-1"/>
            <action
                android:id="@+id/nav_action_add_trans_completed"
                app:popUpTo="@id/nav_new_transactions"
                app:popUpToInclusive="false"
                app:enterAnim="@android:anim/fade_in"
                app:exitAnim="@android:anim/fade_out"
                app:popEnterAnim="@android:anim/fade_in"
                app:popExitAnim="@android:anim/fade_out"/>
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sorokin.yamob.cashmaster.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/nav_action_settings_to_about"
            app:destination="@id/nav_about"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.sorokin.yamob.cashmaster.ui.about.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about"/>

</navigation>